Fix image distortion

--- a/style.scss
+++ b/style.scss
@@ -119,7 +119,6 @@ button:active:hover {
         border-radius: 10px 0 0 10px;
         height: 100%;
         object-fit: cover;
-        content: url(/images/image-product-desktop.jpg);
       }
     }
   }
